--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<title>Twitter. It's what's happening.</title>
 	<link rel="stylesheet" href="style.css">
 </head>
